1.31v

Feature release:
1. Option to pass custom argument for chat, these arguments will be visible in chat form
Example:
<script type="text/javascript">
var LHCChatOptions = {};
LHCChatOptions.attr = new Array();
LHCChatOptions.attr.push({'name':'Basket id','value':'<predefined value>','type':'text','size':12}); // 12 is 100% full row, 6 is 50%
LHCChatOptions.attr.push({'name':'User ID','value':'<predefined value>','type':'hidden','size':0}); // hidden is invisible field, size just zero
(function() {
var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
po.src = 'http://<some_domain>/index.php/chat/getstatus/(position)/middle_right';
var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
})();
</script>

2. Option to prefill some form attributes in javascript
<script type="text/javascript">
LHCChatOptions.attr_prefill = new Array();
LHCChatOptions.attr_prefill.push({'name':'email','value':'remdex@gmail.com'});
LHCChatOptions.attr_prefill.push({'name':'phone','value':'370888888'});
LHCChatOptions.attr_prefill.push({'name':'username','value':'Remigijus Kiminas'});

(function() {
var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
po.src = 'http://<some_domain>/index.php/chat/getstatus/(position)/middle_right';
var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
})();
</script>

3. Option to configure chat popup window width and height, same for chat widget also.

4. Send mail to user, let say you have missed chat. But still you want to responde to user. So with this feature you will be able to do so.

1.30v

Feature release:
1. Upgrade to Foundation 4 version
2. RTL language support

1.29v

Feature release:
1. FAQ module, show FAQ questions to your customers based on their URL.
2. Custom position from top if middle right or middle right is chosen.
3. Dutch translation, thanks to Robin Stuivenberg